@@ -23,7 +23,8 @@ Fixes:
    * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
    * Fix re-order animation when it doesn't end correctly.
    * Fix popup to apply the same style to the notify sub-widget.
-   * Fix Ctxpopup direction if -1 priority used
+   * Fix Ctxpopup direction if unknown priority used.
+   * Fix diskselector when bounce off and round enabled.
    
 Removals:
 
